<resources>
    <string name="app_name">MunichCity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_near">Near me</string>
    <string name="title_search">Search</string>
    <string name="title_trip">Trip</string>
    <string name="title_weather">Weather</string>
    <string name="title_info">Other Information</string>
    <string name="title_map">Map View</string>

    <string name="menu_title">I want to…</string>
    <string name="menu_near">Find something near me</string>
    <string name="menu_search">Search for something</string>
    <string name="menu_trip">Go on a trip</string>
    <string name="menu_weather">Find out the Weather</string>
    <string name="menu_info">Some more Info</string>
    <string name="name">Name</string>

    <string name="header_search_types">What are you searching for?</string>
    <string name="header_search_subtypes">What more exactly?</string>
    <string name="header_search_poi">Which one?</string>
    <string name="number">9999</string>
    <string name="kilometers">Kilometers</string>
    <string name="hint_poi">Type Name of Place</string>
    <string name="count">(999)</string>
    <string name="type">Type</string>
    <string name="subtype">SubType</string>
</resources>
