<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_title">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_near"
                    android:icon="@drawable/menu_near"
                    android:title="@string/menu_near" />
                <item
                    android:id="@+id/menu_search"
                    android:icon="@drawable/menu_search"
                    android:title="@string/menu_search" />
                <item
                    android:id="@+id/menu_trip"
                    android:icon="@drawable/menu_trip"
                    android:title="@string/menu_trip" />
                <item
                    android:id="@+id/menu_weather"
                    android:icon="@drawable/menu_weather"
                    android:title="@string/menu_weather" />
                <item
                    android:id="@+id/menu_info"
                    android:icon="@drawable/menu_info"
                    android:title="@string/menu_info" />
            </group>
        </menu>
    </item>
</menu>
