<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <TextView
                android:text="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/distance"
                android:gravity="center_horizontal|bottom"
                android:textSize="@dimen/text_med"
                android:paddingBottom="2dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:text="@string/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:textSize="@dimen/text_med"
                android:paddingTop="2dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator"
        android:background="@color/background_separator"/>

</LinearLayout>