<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:textSize="@dimen/text_large"
        android:background="@color/white_transparent"/>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="2dp"
        android:orientation="horizontal"
        android:gravity="center_vertical|left">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|left"
            android:shrinkColumns="0"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_med"/>

                <TextView
                    android:id="@+id/type"
                    android:text="@string/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/subtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:textSize="@dimen/text_med"/>

                <TextView
                    android:id="@+id/subtype"
                    android:text="@string/subtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_med"
                    android:textStyle="bold"/>

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="3dp"
            android:paddingBottom="3dp">

            <TextView
                android:text="@string/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/distance"
                android:gravity="center_horizontal|bottom"
                android:textSize="@dimen/text_med"
                android:paddingBottom="2dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:text="@string/kilometers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:textSize="@dimen/text_med"
                android:paddingTop="2dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>